# SplitBill-backend

./: CMakeLists.txt  Makefile  docker-compose.yml
.github/workflows/: ci.yml
configs/: config_vars.docker.yaml  config_vars.testing.yaml  config_vars.yaml  static_config.yaml
postgresql/data/: initial_data.sql
postgresql/schemas/: db_1.sql
src/: main.cpp
src/handlers/lib/: auth.cpp  auth.hpp  jwt.cpp  jwt.h
src/handlers/v1/login/: view.cpp
src/handlers/v1/products/: filters.hpp
src/handlers/v1/products/add-product/: view.cpp
src/handlers/v1/products/delete-product/: view.cpp
src/handlers/v1/products/get-product/: view.cpp
src/handlers/v1/products/get-products/: view.cpp
src/handlers/v1/register/: view.cpp
src/handlers/v1/rooms/create-room/: view.cpp
src/handlers/v1/rooms/get-all-rooms/: view.cpp
src/handlers/v1/rooms/get-created-rooms/: view.cpp
src/handlers/v1/rooms/get-room/: view.cpp
src/handlers/v1/rooms/get-room-user-prices/: view.cpp
src/handlers/v1/rooms/get-room-users/: view.cpp
src/handlers/v1/rooms/join-room/: view.cpp
src/handlers/v1/rooms/update-room/: view.cpp
src/handlers/v1/user-products/add-user-to-product/: view.cpp
src/handlers/v1/user-products/get-user-product/: view.cpp
src/handlers/v1/user-products/get-user-products/: view.cpp
src/handlers/v1/user-products/update-user-product/: view.cpp
src/models/: detailed-room.cpp  detailed-room.hpp  detailed_room.cpp  detailed_room.hpp  room.cpp  session.hpp  user-product.cpp  user-product.hpp
tests/: test_basic.py  test_products.py  test_rooms.py  test_user_products.py
